added tempQueue display data